Proceso de construccion de la seccion de resumen

--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
                     <article id="resumen" class="g-basic-card">
                         <h2 class="titulo-section">Resumen</h2>
                         <div class="grid-layout">
-                            
+                            <div class="tickets-vendidos-value">57</div>
+                            <div class="dinero-caja-value">120.000$</div>
+                            <label for="" class="tickets-vendidos">Tickets Vendidos</label>
+                            <label for="" class="dinero-caja">Dinero en Caja</label>
                         </div>
                     </article>
                     <article id="ocupacion" class="g-basic-card">
