--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
             <img src="/images/BusTicketslogo.svg" alt="Logo del sitio">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="pills-tickets-tab" data-bs-toggle="pill"
+                    <button class="nav-link" id="pills-tickets-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-tickets" type="button" role="tab" aria-controls="pills-tickets"
                         aria-selected="true">Boletería <i class="icon-ticket"></i></button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-administration-tab" data-bs-toggle="pill"
+                    <button class="nav-link active" id="pills-administration-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-administration" type="button" role="tab"
                         aria-controls="pills-administration" aria-selected="false">Administración <i class="icon-equalizer2"></i></button>
                 </li>
             </ul>
         </div>
-
     </header>
 
     <main class="tab-content" id="pills-tabContent">
@@ -187,7 +186,7 @@
                     <nav>
                         <!-- BOTONES DEL TAB DE NAVEGACION -->
                         <div class="nav nav-tabs mt-5" id="nav-tab" role="tablist">
-                            <button class="nav-link active" id="nav-bustrip-tab" data-bs-toggle="tab"
+                            <button class="nav-link" id="nav-bustrip-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-bustrip" type="button" role="tab" aria-controls="nav-bustrip"
                                 aria-selected="true">Viajes</button>
 
@@ -198,7 +197,7 @@
                             <button class="nav-link" id="nav-vehicle-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-vehicle" type="button" role="tab" aria-controls="nav-vehicle"
                                 aria-selected="false">Vehículos</button>
-                            <button class="nav-link" id="nav-schedule-tab" data-bs-toggle="tab"
+                            <button class="nav-link active" id="nav-schedule-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-schedule" type="button" role="tab" aria-controls="nav-schedule"
                                 aria-selected="false">Horarios</button>
                         </div>
@@ -471,19 +470,8 @@
                                 </label>
                                 <div class="container-table col-3">
                                     <!-- TABLA DE VIAJES -->
-                                    <table class="table table-striped">
-                                        <tr>
-                                            <td>Horario 1</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Horario 2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Horario 3</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Horario 4</td>
-                                        </tr>
+                                    <table id="table-schedule" class="table table-striped">
+                                        <tbody></tbody>
                                     </table>
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE Viaje -->
@@ -531,6 +519,7 @@
             </section>
         </div>
     </main>
+    <script src="js/schedules.js" type="text/javascript"></script>
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
