--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="simulador-busticket">
     <header class="container-fluid g-basic-card">
         <div class="container">
-            <img src="/images/BusTicketslogo.svg" alt="Logo del sitio">
+            <img src="images/BusTicketslogo.svg" alt="Logo del sitio">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-tickets-tab" data-bs-toggle="pill"
@@ -229,8 +229,8 @@
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE VIAJE -->
                                 <div class="col-9">
-                                    <div class="d-flex flex-row justify-content-between align-items-center">
-                                        <h2 class="title-section">Información de Viaje</h2>
+                                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-between align-items-center">
+                                        <h2 class="title-section mt-5 mt-lg-0">Información de Viaje</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
                                                 <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
@@ -310,8 +310,8 @@
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE RUTA -->
                                 <div class="col-9">
-                                    <div class="d-flex flex-row justify-content-between align-items-center">
-                                        <h2 class="title-section">Información de Ruta</h2>
+                                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-between align-items-center">
+                                        <h2 class="title-section mt-5 mt-lg-0">Información de Ruta</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
                                                 <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
@@ -383,7 +383,7 @@
                         <div class="tab-pane fade" id="nav-vehicle" role="tabpanel" aria-labelledby="nav-vehicle-tab">
                             <div id="vehiculos"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
-                                    <h4>Vehiculos Creados</h4>
+                                    <h4>Vehículos Creados</h4>
                                 </label>
                                 <div class="container-table col-3">
                                     <!-- TABLA DE VEHICULOS -->
@@ -404,8 +404,8 @@
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE VEHICULOS -->
                                 <div class="col-9">
-                                    <div class="d-flex flex-row justify-content-between align-items-center">
-                                        <h2 class="title-section">Información de Viaje</h2>
+                                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-between align-items-center">
+                                        <h2 class="title-section mt-5 mt-lg-0">Información de Vehículo</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
                                                 <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
@@ -476,13 +476,13 @@
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE Viaje -->
                                 <div class="col-9">
-                                    <div class="d-flex flex-row justify-content-between align-items-center">
-                                        <h2 class="title-section">Información de Horario</h2>
+                                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-between align-items-center">
+                                        <h2 class="title-section mt-5 mt-lg-0">Información de Horario</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
                                                 <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
                                                 <li><a href="" class="btn">Editar<i class="icon-pencil"></i></a></li>
-                                                <li><a href="" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
+                                                <li><a href="#" class="btn" onclick="getScheduleFormData()">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
                                             </ul>
                                         </nav>
                                     </div>
@@ -492,7 +492,7 @@
                                                 <label for="">
                                                     <h4>Nombre Horario</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese marca">
+                                                <input id="scheduleNameInput" type="text" placeholder="Ingrese marca">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -500,13 +500,13 @@
                                                 <label for="">
                                                     <h4>Horario Check In</h4>
                                                 </label>
-                                                <input type="time" placeholder="Ingrese patente">
+                                                <input id="scheduleCheckInInput" type="time" placeholder="Ingrese patente">
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Horario Salida</h4>
                                                 </label>
-                                                <input type="time" placeholder="Ingrese cantidad de asientos">
+                                                <input id="scheduleDepartureInput" type="time" placeholder="Ingrese cantidad de asientos">
                                             </div>
                                         </div>
                                         
