--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                                             <ul>
                                                 <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
                                                 <li><a href="" class="btn">Editar<i class="icon-pencil"></i></a></li>
-                                                <li><a href="#" class="btn" onclick="getScheduleFormData()">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
+                                                <li><a href="#" id="save-schedule-btn" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
                                             </ul>
                                         </nav>
                                     </div>
@@ -520,6 +520,7 @@
         </div>
     </main>
     <script src="js/schedules.js" type="text/javascript"></script>
+    <script src="js/schedule2.js" type="text/javascript"></script>
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
