--- a/index.html
+++ b/index.html
@@ -469,19 +469,19 @@
                                     <h4>Horarios Creados</h4>
                                 </label>
                                 <div class="container-table col-3">
-                                    <!-- TABLA DE VIAJES -->
+                                    <!-- TABLA DE HORARIOS -->
                                     <table id="table-schedule" class="table table-striped">
                                         <tbody></tbody>
                                     </table>
                                 </div>
-                                <!-- FORMULARIO DE INFORMACION DE Viaje -->
+                                <!-- FORMULARIO DE INFORMACION DE HORARIOS -->
                                 <div class="col-9">
                                     <div class="d-flex flex-column-reverse flex-lg-row justify-content-between align-items-center">
                                         <h2 class="title-section mt-5 mt-lg-0">Información de Horario</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
-                                                <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
-                                                <li><a href="" class="btn">Editar<i class="icon-pencil"></i></a></li>
+                                                <li><a href="#" id="new-schedule-btn" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
+                                                <li><a href="#" id="edit-schedule-btn" class="btn">Editar<i class="icon-pencil"></i></a></li>
                                                 <li><a href="#" id="save-schedule-btn" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
                                             </ul>
                                         </nav>
@@ -492,7 +492,7 @@
                                                 <label for="">
                                                     <h4>Nombre Horario</h4>
                                                 </label>
-                                                <input id="scheduleNameInput" type="text" placeholder="Ingrese marca">
+                                                <input id="scheduleNameInput" class="input-disable" type="text" placeholder="Ingrese un nombre" autocomplete="off" disabled>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -500,13 +500,13 @@
                                                 <label for="">
                                                     <h4>Horario Check In</h4>
                                                 </label>
-                                                <input id="scheduleCheckInInput" type="time" placeholder="Ingrese patente">
+                                                <input id="scheduleCheckInInput" type="time" autocomplete="off" disabled>
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Horario Salida</h4>
                                                 </label>
-                                                <input id="scheduleDepartureInput" type="time" placeholder="Ingrese cantidad de asientos">
+                                                <input id="scheduleDepartureInput" type="time" autocomplete="off" disabled>
                                             </div>
                                         </div>
                                         
@@ -519,8 +519,10 @@
             </section>
         </div>
     </main>
+    <script src="js/classes.js" type="text/javascript"></script>
+    <script src="js/variables.js" type="text/javascript"></script>
+    <script src="js/global_functions.js" type="text/javascript"></script>
     <script src="js/schedules.js" type="text/javascript"></script>
-    <script src="js/schedule2.js" type="text/javascript"></script>
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
