Inicio de la seccion vehiculos

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                                                 <label for="">
                                                     <h4>Modelo Vehículo</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese modelo">
+                                                <input id="vehicleBrandInput" type="text" placeholder="Ingrese modelo">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -434,13 +434,13 @@
                                                 <label for="">
                                                     <h4>Patente Vehículo</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese patente">
+                                                <input id="vehiclePlatesInput" type="text" placeholder="Ingrese patente">
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Cantidad Asientos</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese cantidad de asientos">
+                                                <input id="vehicleSeatsInput" type="text" placeholder="Ingrese cantidad de asientos">
                                             </div>
                                         </div>
                                         <div class="row">
