--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                                 data-bs-target="#nav-routes" type="button" role="tab" aria-controls="nav-routes"
                                 aria-selected="false">Rutas</button>
 
-                            <button class="nav-link" id="nav-vehicle-tab" data-bs-toggle="tab"
+                            <button class="nav-link active" id="nav-vehicle-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-vehicle" type="button" role="tab" aria-controls="nav-vehicle"
                                 aria-selected="false">Vehículos</button>
-                            <button class="nav-link active" id="nav-schedule-tab" data-bs-toggle="tab"
+                            <button class="nav-link" id="nav-schedule-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-schedule" type="button" role="tab" aria-controls="nav-schedule"
                                 aria-selected="false">Horarios</button>
                         </div>
@@ -380,14 +380,14 @@
                         </div>
                         
                         <!-- VEHICULOS -->
-                        <div class="tab-pane fade" id="nav-vehicle" role="tabpanel" aria-labelledby="nav-vehicle-tab">
+                        <div class="tab-pane fade show active" id="nav-vehicle" role="tabpanel" aria-labelledby="nav-vehicle-tab">
                             <div id="vehiculos"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
                                     <h4>Vehículos Creados</h4>
                                 </label>
                                 <div class="container-table col-3">
                                     <!-- TABLA DE VEHICULOS -->
-                                    <table class="table table-striped">
+                                    <table id="table-vehicle" class="table table-striped">
                                         <tr>
                                             <td>Vehiculo 1</td>
                                         </tr>
@@ -408,9 +408,9 @@
                                         <h2 class="title-section mt-5 mt-lg-0">Información de Vehículo</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
-                                                <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
-                                                <li><a href="" class="btn">Editar<i class="icon-pencil"></i></a></li>
-                                                <li><a href="" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
+                                                <li><a href="" id="new-vehicle-btn" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
+                                                <li><a href="" id="edit-vehicle-btn" class="btn">Editar<i class="icon-pencil"></i></a></li>
+                                                <li><a href="" id="save-vehicle-btn" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
                                             </ul>
                                         </nav>
                                     </div>
@@ -420,13 +420,13 @@
                                                 <label for="">
                                                     <h4>Marca Vehículo</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese marca">
+                                                <input id="vehicleBrandInput" type="text" placeholder="Ingrese marca" autocomplete="off" disabled> 
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Modelo Vehículo</h4>
                                                 </label>
-                                                <input id="vehicleBrandInput" type="text" placeholder="Ingrese modelo">
+                                                <input id="vehicleModelInput" type="text" placeholder="Ingrese modelo" autocomplete="off" disabled>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -434,13 +434,13 @@
                                                 <label for="">
                                                     <h4>Patente Vehículo</h4>
                                                 </label>
-                                                <input id="vehiclePlatesInput" type="text" placeholder="Ingrese patente">
+                                                <input id="vehiclePlatesInput" type="text" placeholder="Ingrese patente" autocomplete="off" disabled>
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Cantidad Asientos</h4>
                                                 </label>
-                                                <input id="vehicleSeatsInput" type="text" placeholder="Ingrese cantidad de asientos">
+                                                <input id="vehicleSeatsInput" type="text" placeholder="Ingrese cantidad de asientos" autocomplete="off" disabled> 
                                             </div>
                                         </div>
                                         <div class="row">
@@ -448,13 +448,13 @@
                                                 <label for="">
                                                     <h4>Personal de operación</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingrese personal">
+                                                <input id="vehicleStaffInput" type="text" placeholder="Ingrese personal" autocomplete="off" disabled>
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Capacidad</h4>
                                                 </label>
-                                                <input type="text" placeholder="Capacidad pasajeros" readonly>
+                                                <input id="vehicleCapacityInput" type="text" placeholder="Capacidad pasajeros" readonly>
                                             </div>
                                         </div>
                                     </form>
@@ -463,7 +463,7 @@
                         </div>
                         
                         <!-- HORARIOS -->
-                        <div class="tab-pane fade show active" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+                        <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
                             <div id="horarios"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
                                     <h4>Horarios Creados</h4>
@@ -523,6 +523,8 @@
     <script src="js/variables.js" type="text/javascript"></script>
     <script src="js/global_functions.js" type="text/javascript"></script>
     <script src="js/schedules.js" type="text/javascript"></script>
+    <script src="js/vehicles.js" type="text/javascript"></script>
+
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
