--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         </div>
                         
                         <!-- VEHICULOS -->
-                        <div class="tab-pane fade show active" id="nav-vehicle" role="tabpanel" aria-labelledby="nav-vehicle-tab">
+                        <div class="tab-pane fade" id="nav-vehicle" role="tabpanel" aria-labelledby="nav-vehicle-tab">
                             <div id="vehiculos"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
                                     <h4>Vehículos Creados</h4>
@@ -463,7 +463,7 @@
                         </div>
                         
                         <!-- HORARIOS -->
-                        <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+                        <div class="tab-pane fade show active" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
                             <div id="horarios"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
                                     <h4>Horarios Creados</h4>
@@ -519,6 +519,7 @@
             </section>
         </div>
     </main>
+    <script src="js/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="js/classes.js" type="text/javascript"></script>
     <script src="js/variables.js" type="text/javascript"></script>
     <script src="js/global_functions.js" type="text/javascript"></script>
