--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         </div>
     </header>
 
+    <div id="notification">
+        <p>Texto de Notificacion</p>
+    </div>
+
     <main class="tab-content" id="pills-tabContent">
         <!-- CONTENEDOR SECTION register-tickets -->
         <div class="tab-pane fade" id="pills-tickets" role="tabpanel" aria-labelledby="pills-tickets-tab">
@@ -190,11 +194,11 @@
                                 data-bs-target="#nav-bustrip" type="button" role="tab" aria-controls="nav-bustrip"
                                 aria-selected="true">Viajes</button>
 
-                            <button class="nav-link" id="nav-routes-tab" data-bs-toggle="tab"
+                            <button class="nav-link active" id="nav-routes-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-routes" type="button" role="tab" aria-controls="nav-routes"
                                 aria-selected="false">Rutas</button>
 
-                            <button class="nav-link active" id="nav-vehicle-tab" data-bs-toggle="tab"
+                            <button class="nav-link" id="nav-vehicle-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-vehicle" type="button" role="tab" aria-controls="nav-vehicle"
                                 aria-selected="false">Vehículos</button>
                             <button class="nav-link" id="nav-schedule-tab" data-bs-toggle="tab"
@@ -286,26 +290,15 @@
                         </div>
                         
                         <!-- RUTAS -->
-                        <div class="tab-pane fade" id="nav-routes" role="tabpanel" aria-labelledby="nav-routes-tab">
+                        <div class="tab-pane fade show active" id="nav-routes" role="tabpanel" aria-labelledby="nav-routes-tab">
                             <div id="route"  class="row mt-5 g-administration-item-layout">
                                 <!-- TABLA DE RUTAS -->
                                 <label for="">
                                     <h4>Rutas Creadas</h4>
                                 </label>
                                 <div class="container-table col-3">
-                                    <table class="table table-striped">
-                                        <tr>
-                                            <td>Ruta 1</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ruta 2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ruta 3</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ruta 4</td>
-                                        </tr>
+                                    <table id="table-route" class="table table-striped">
+                                        <tbody></tbody>
                                     </table>
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE RUTA -->
@@ -314,9 +307,9 @@
                                         <h2 class="title-section mt-5 mt-lg-0">Información de Ruta</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
-                                                <li><a href="" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
-                                                <li><a href="" class="btn">Editar<i class="icon-pencil"></i></a></li>
-                                                <li><a href="" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
+                                                <li><a id="new-route-btn" class="btn active">Nuevo<i class="icon-file-text2"></i> </a></li>
+                                                <li><a id="edit-route-btn" class="btn">Editar<i class="icon-pencil"></i></a></li>
+                                                <li><a id="save-route-btn" class="btn">Guardar<i class="icon-floppy-disk"></i></a></li>                                                
                                             </ul>
                                         </nav>
                                     </div>
@@ -326,7 +319,7 @@
                                                 <label for="">
                                                     <h4>Nombre de Ruta</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingresa el nombre ruta">
+                                                <input id="routeNameInput" type="text" placeholder="nombre de la ruta" readonly>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -334,13 +327,13 @@
                                                 <label for="">
                                                     <h4>Lugar de Origen</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingresa el nombre de origen">
+                                                <input id="routedDepartureNameInput" type="text" placeholder="Ingresa el nombre del lugar origen" disabled autocomplete="off">
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Código Lugar de Origen</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingresa el código origen">
+                                                <input id="routeDepartureCodeInput" type="text" placeholder="Ingresa el código del origen" disabled autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -348,13 +341,13 @@
                                                 <label for="">
                                                     <h4>Lugar de Destino</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingresa el nombre de destino">
+                                                <input id="routeDestinationNameInput" type="text" placeholder="Ingresa el nombre de destino" disabled autocomplete="off">
                                             </div>
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Código Lugar de Destino</h4>
                                                 </label>
-                                                <input type="text" placeholder="Ingresa el código destino">
+                                                <input id="routeDestinationCodeInput" type="text" placeholder="Ingresa el código destino" disabled autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -362,15 +355,15 @@
                                                 <label for="">
                                                     <h4>Distancia de Ruta (Km)</h4>
                                                 </label>
-                                                <input type="text" placeholder="Distancia en Km">
+                                                <input id="routeDistanceInput" type="text" placeholder="Distancia en Km" disabled autocomplete="off">
                                             </div>
                                             <div class="input-eta col-sm-12 col-md-6">
                                                 <label for="">
                                                     <h4>Tiempo Estimado</h4>
                                                 </label>
                                                 <div class="">
-                                                    <input class="" type="text" placeholder="Horas" readonly>
-                                                    <input class="" type="text" placeholder="Minutos" readonly>
+                                                    <input id="routeHoursInput" type="text" placeholder="Horas" readonly>
+                                                    <input id="routeMinutesInput" type="text" placeholder="Minutos" readonly>
                                                 </div>
                                             </div>
                                         </div>
@@ -388,18 +381,7 @@
                                 <div class="container-table col-3">
                                     <!-- TABLA DE VEHICULOS -->
                                     <table id="table-vehicle" class="table table-striped">
-                                        <tr>
-                                            <td>Vehiculo 1</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Vehiculo 2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Vehiculo 3</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Vehiculo 4</td>
-                                        </tr>
+                                        <tbody></tbody>
                                     </table>
                                 </div>
                                 <!-- FORMULARIO DE INFORMACION DE VEHICULOS -->
@@ -463,7 +445,7 @@
                         </div>
                         
                         <!-- HORARIOS -->
-                        <div class="tab-pane fade show active" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+                        <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
                             <div id="horarios"  class="row mt-5 g-administration-item-layout">
                                 <label for="">
                                     <h4>Horarios Creados</h4>
@@ -525,6 +507,7 @@
     <script src="js/global_functions.js" type="text/javascript"></script>
     <script src="js/schedules.js" type="text/javascript"></script>
     <script src="js/vehicles.js" type="text/javascript"></script>
+    <script src="js/routes.js" type="text/javascript"></script>
 
 
     <!-- SCRIPTS -->
