--- a/index.html
+++ b/index.html
@@ -241,10 +241,9 @@
                                         <div class="row">
                                             <div class="col-sm-12 col-md-6">
                                                 <label for="">
-                                                    <h4>Nombre del Viaje</h4>
+                                                    <h4>Fecha del Viaje</h4>
                                                 </label>
-                                                <input id="tripNameInput" type="text" placeholder="nombre del viaje"
-                                                    disabled autocomplete="off">
+                                                <input type="date" name="" id="tripDateInput" disabled autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="row">
