Modificaciones a la validacion de viajes

--- a/index.html
+++ b/index.html
@@ -67,24 +67,16 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-12 col-md-6">
+                                <div class="col-sm-12 col-md-12">
                                     <label for="">
-                                        <h4>Ruta</h4>
+                                        <h4>Seleccionar Viaje</h4>
                                     </label>
-                                    <select name="rutas" id="">
-                                        <option value="">stgo-valpo</option>
-                                        <option value="">stgo-talca</option>
+                                    <select id="trip-selector">
+                                        <option value="default">--</option>
                                     </select>
                                 </div>
-                                <div class="col-sm-12 col-md-6">
-                                    <label for="">
-                                        <h4>Horario</h4>
-                                    </label>
-                                    <select name="rutas" id="">
-                                        <option value="">Tarde - 16:40</option>
-                                        <option value="">Noche - 20:30</option>
-                                    </select>
-                                </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Salida</h4>
@@ -538,6 +530,8 @@
     <script src="js/vehicles.js" type="text/javascript"></script>
     <script src="js/routes.js" type="text/javascript"></script>
     <script src="js/scheduledTrips.js" type="text/javascript"></script>
+    <script src="js/tickets.js" type="text/javascript"></script>
+
 
 
 
