Aplicacion de los numeros de tickets

--- a/index.html
+++ b/index.html
@@ -139,22 +139,8 @@
                     <!-- ESTADISTICAS DE VENTAS -->
                     <article id="sells" class="g-basic-card">
                         <h2 class="title-section">Últimas Ventas</h2>
-                        <table class="table table-striped text-center mt-5">
-                            <tr>
-                                <td>Nombre Apellido</td>
-                                <td>stgo - valparaiso</td>
-                                <td>6800$</td>
-                            </tr>
-                            <tr>
-                                <td>Nombre Apellido</td>
-                                <td>stgo - valparaiso</td>
-                                <td>6800$</td>
-                            </tr>
-                            <tr>
-                                <td>Nombre Apellido</td>
-                                <td>stgo - valparaiso</td>
-                                <td>6800$</td>
-                            </tr>
+                        <table id="table-tickets" class="table table-striped text-center mt-5">
+                            <tbody></tbody>
                         </table>
                     </article>
                 </div>
