--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <!-- HOJAS DE ESTILOS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- ESTILOS DEL SITIO -->
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 
 <body id="simulador-busticket">
     <header class="container-fluid g-basic-card">
         <div class="container">
             <img src="images/BusTicketslogo.svg" alt="Logo del sitio">
+            <!-- NAVEGACION DE LOS MODULOS -->
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="pills-tickets-tab" data-bs-toggle="pill"
@@ -137,7 +138,7 @@
                             </div>
                         </div>
                     </article>
-                    <!-- ESTADISTICAS DE VENTAS -->
+                    <!-- TABLA DE HISTORICO DE VENTAS -->
                     <article id="sells" class="g-basic-card">
                         <h2 class="title-section">Últimas Ventas</h2>
                         <div class="table-ticket-wrap">
@@ -525,6 +526,7 @@
             </div>
         </div>
     </main>
+    <!-- SCRIPTS PROPIOS DEL SITIO -->
     <script src="js/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="js/classes.js" type="text/javascript"></script>
     <script src="js/variables.js" type="text/javascript"></script>
@@ -536,10 +538,7 @@
     <script src="js/users.js" type="text/javascript"></script>
     <script src="js/tickets.js" type="text/javascript"></script>
 
-
-
-
-    <!-- SCRIPTS -->
+    <!-- SCRIPTS BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
