--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <label for="">
                                         <h4>Documento Identidad Pasajero</h4>
                                     </label>
-                                    <input type="text" id="userIdInput" placeholder="Ingresa el n° documento">
+                                    <input type="text" id="userIdInput" placeholder="0.000.000-0">
                                 </div>
                             </div>
                             <div class="row">
