--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                                     <label for="">
                                         <h4>Nombre Pasajero</h4>
                                     </label>
-                                    <input type="text" id="userNameInput" placeholder="Ingresa el nombre">
+                                    <input type="text" id="userNameInput" placeholder="Ingresa el nombre" autocomplete="off">
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Apellido Pasajero</h4>
                                     </label>
-                                    <input type="text" id="userLastNameInput" placeholder="Ingresa el apellido">
+                                    <input type="text" id="userLastNameInput" placeholder="Ingresa el apellido" autocomplete="off">
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Documento Identidad Pasajero</h4>
                                     </label>
-                                    <input type="text" id="userIdInput" placeholder="0.000.000-0">
+                                    <input type="text" id="userIdInput" placeholder="N° de documento" autocomplete="off">
                                 </div>
                             </div>
                             <div class="row">
@@ -120,6 +120,7 @@
                                 </div>
                             </div>
                             <div class="button-panel">
+                                <a class="g-btn" id="cancel-ticket-btn">Cancelar</a>
                                 <a class="g-btn" id="register-ticket-btn">Registrar</a>
                             </div>
                         </form>
