Agregar un boton para borrar los inputs del formulario de registro

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                             <div class="button-panel">
-                                <a class="g-btn" id="cancel-ticket-btn">Cancelar</a>
+                                <a class="g-btn-red" id="cancel-ticket-btn">Cancelar</a>
                                 <a class="g-btn" id="register-ticket-btn">Registrar</a>
                             </div>
                         </form>
@@ -536,7 +536,6 @@
     <script src="js/vehicles.js" type="text/javascript"></script>
     <script src="js/routes.js" type="text/javascript"></script>
     <script src="js/scheduledTrips.js" type="text/javascript"></script>
-    <script src="js/users.js" type="text/javascript"></script>
     <script src="js/tickets.js" type="text/javascript"></script>
 
     <!-- SCRIPTS BOOTSTRAP -->
